# nonlinear_causality_in_alpha_research

./: .bazelrc  Dockerfile  MODULE.bazel  README.md  SOLUTION_EXPLANATION.md  requirements_lock.txt  run.bat  run.sh
.github/workflows/: ci.yml
docs/: AlphaPod_Production_Monorepo.md  Alpha_Research_NonLinear.md  SOLUTION_EXPLANATION.md  research.tex
models/: README.md
notebooks/: research.ipynb
research/: research.bib
src/alpha_engine/: BUILD.bazel  CMakeLists.txt  MacroAlphaEngine.h  MacroAlphaEngine.ixx  RiskKernel.h  RiskKernel.ixx  alpha_engine_test.cpp  bindings.cpp  test_wrapper.sh
src/research/: BUILD.bazel  alpha_pipeline.py  causality.py  config.py  features.py  inference.py  regime.py  test_alpha_pipeline.py  test_nonlinear_pipeline.py
