# src/alpha_engine/BUILD.bazel — AlphaPod v2 (Delegated to CMake)
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")
load("@rules_shell//shell:sh_test.bzl", "sh_test")  # <--- ADD THIS LINE

filegroup(
    name = "engine_srcs",
    srcs = glob(["**"]),
)

cmake(
    name = "alpha_engine_delegated",
    cache_entries = {
        "CMAKE_CXX_COMPILER": "clang++-19",
        "CMAKE_CXX_STANDARD": "26",
        "CMAKE_PREFIX_PATH": "$$EXT_BUILD_DEPS$$",
        "CMAKE_POSITION_INDEPENDENT_CODE": "ON",
        "CMAKE_CXX_FLAGS": "-stdlib=libc++ -fexperimental-library",
    },
    lib_source = ":engine_srcs",
    out_shared_libs = ["libalpha_engine_cpp.so"],
    out_binaries = ["alpha_engine_test"],
    deps = [
        # CRITICAL: Target individual libraries to prevent double-counting
        "@nanobind//:nanobind",
        "@googletest//:gtest_main",
    ],
)

alias(
    name = "alpha_engine_cpp.so",
    actual = ":alpha_engine_delegated",
)

sh_test(
    name = "alpha_engine_test",
    srcs = ["test_wrapper.sh"],
    data = [":alpha_engine_delegated"],
)
